# sdmt-2-lab-ci

./: .gitignore  CMakeLists.txt  lint.sh
include/: List.hpp
src/: List.cpp  main.cpp
tests/: insert_append.cpp  test_append.cpp  test_insert.cpp  test_remove.cpp
